--- a/httpdocs/sites/all/themes/talkinglessons/dsass/_general.sass
+++ b/httpdocs/sites/all/themes/talkinglessons/dsass/_general.sass
@@ -73,7 +73,7 @@ body.front
 		z-index: 255
 		color: white
 		padding: 5px 10px
-		max-width: 100%
+		width: 100%
 		font-size: 1.5rem
 		background: rgba( 9, 57, 133, 0.65)
 		h2
@@ -168,7 +168,6 @@ body.front
 					font-size: 1rem
 				&:first-child
 					border-radius: 10px 0 0 10px
-					h2	
 				&:nth-child(2)
 					width: 34%
 					h2
